# personalsite

./: Procfile  README.md  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
app/: admin.py  forms.py  models.py  urls.py
app/templates/: base.html  menu.html
app/templates/site/: details.html  index.html
app/tests/: test_category.py  test_contact.py  test_project.py  test_project_image.py
app/views/: site.py
django_crud_generator/: .gitignore  README.md  conf.py  core.py  django.gitlab-ci.yml  django_crud_generator.py  requirements.txt  utils.py
django_crud_generator/base_django/: apps.py  conf.py  context_processors.py  models.py  utils.py  views.py
django_crud_generator/html_manager/: form_manager.py  table_manager.py
django_crud_generator/management/commands/: copy_dependencies.py  generate.py
django_crud_generator/static/gromart/css/: slick-theme.css  style.css
django_crud_generator/templates/: admin.py.tmpl  admin_initial.py.tmpl  admin_inline.py.tmpl  conf.py.tmpl  conf_initial.py.tmpl  forms.py.tmpl  forms_initial.py.tmpl  formset.py.tmpl  menu_item.html.tmpl  mixins.py.tmpl  mixins_initial.py.tmpl  project_urls.py.tmpl  script_select.tmpl  serializers.py.tmpl  tests.py.tmpl  urls.py.tmpl  urls_api.py.tmpl  urls_api_initial.py.tmpl  urls_api_urls_patch.py.tmpl  urls_initial.py.tmpl  urls_slug.py.tmpl  urls_slug_initial.py.tmpl  utils.py.tmpl  utils_initial.py.tmpl  view.py.tmpl  viewsets.py.tmpl  viewsets_initial.py.tmpl
personalsite/: settings.py  urls.py
static/assets/css/: style.css
(+16 files in other folders)
