[tool.poetry]
name = "personalsite"
version = "0.1.0"
description = ""
authors = ["Caio Barbosa <caio.barbosa@virtus.ufcg.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.13"
beautifulsoup4 = "^4.11.1"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
django-cors-headers = "^3.13.0"
django-extensions = "^3.2.1"
django-js-asset = "^2.0.0"
gunicorn = "^20.1.0"
pytz = "^2022.6"
pyyaml = "^6.0"
requests = "^2.28.1"
whitenoise = "^6.2.0"
djangorestframework = "^3.14.0"
django-rest-auth = {extras = ["with-social"], version = "^0.9.5"}
markdown = "^3.4.1"
django-filter = "^22.1"
django-datatables-view = "^1.20.0"
pillow = "^9.3.0"
pyimgur = "^0.6.0"
django = "3.2.16"
setuptools = "65.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
